mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__dark_mode__inject_style_to_another_target-2.snap
---
source: mail/mail-html-transformer/src/tests/dark_mode.rs
expression: head
---
<style style="text/css">/* <light_and_dark_css> */</style><style style="text/css">
                  @media ( prefers-color-scheme: dark ) {
                      #protonmail-message .main {
color: #fff !important
 }html#protonmail-message {
background-color: #191927 !important
 }


                  }
                </style>
