mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__dark_mode__inject_style_to_another_target.snap
---
source: mail/mail-html-transformer/src/tests/dark_mode.rs
expression: html.to_string()
---
<html><head>
    <style>.main{color:#000!important}html{background-color:#fff!important}</style>
  </head>
  <body>
  

</body></html>
