mail/mail-html-transformer/src/tests/snapshots/proton_mail_html_transformer__transforms__tests__dark_mode__inject_style_to_another_target_twice.snap
---
source: mail/mail-html-transformer/src/tests/dark_mode.rs
expression: html.to_string()
---
<html><head>
    <style>.main{color:#000}</style>
  </head>
  <body>
  

</body></html>
